1998-06-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c: added create_converter() fucntion that creates a
	base conversion dialog.
	* callbacks.[ch]: some stuff for base conversion.
	
1998-06-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c: added radio buttons to find/replace dialogs  to enable
	user to nicely choose between hex and ascii mode.
	* ghex.h, ui.c, callbacks.c: now we store pointers to all the
	find/replace/jump dialog widgets and find/replace search type
	in a [Find|Replace|Jump]Dialog structs. Relevant callbacks were
	modified to accomodate this.

1998-06-07  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: moved to gnome-libs/libgnomeui
	* gnome-mdi-child.[ch]: (ex gnome-document.[ch]) moved to
	gnome-libs/libgnomeui
	* Makefile.am: changed to accomodate the above
	
1998-06-03  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: major cleanup of gnome-mdi code. looks much better
	now ;)
	
1998-06-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.[ch]: added gnome_mdi_set_document_[menu|list]_path()
	functions that set path for insertion of document-specific menus and
	document list menu respectively. also patched things up a bit so that
	there is no ghex specific code in GnomeMDI any more.

	* main.c (main): added some comments and calls to
	gnome_mdi_set_document_[menu|list]_path().
	
1998-06-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c (app_set_active_view): a few more fixes, I hope it works
	OK now.

1998-06-01  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: changed to use new gnome_app_insert_menus() and
	gnome_app_remove_menus() routines.
	* gnome-document.[ch]: added GnomeUIInfo support for menu creation via
	menu_template member and gnome_document_set_menu_template().
	* hex-document.c: changed to use GnomeUIInfo support.
	
1998-05-31  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: added images to Dnd cursors. The widges are global vars,