@@ -1,3 +1,10 @@
+1998-06-18  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
+	* hex-document.c: put "Group Data As" menu back to document's
+	menu structure.
+	* callbacks.[ch]: moved callbacks for document's menuitems to
+	hex-document.c.
+
 1998-06-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* ui.c: added create_converter() fucntion that creates a
